# StarData-Python

./: README.md  StarData.py  setup.cfg  setup.py
.github/workflows/: python-publish.yml
StarData/: Error.py  StarData.py  StarValue.py  __init__.py
