[metadata]
name = StarData
version = 0.0.1
author = zhy-uts
author_email = zhuhaoyu0909@icloud.com
description = A comprehensive simple API for general cloud database framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/underthestars-zhy/StarData-Python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.24.0
